[tool.poetry]
name = "VenomCI"
version = "0.0.1"
description = "Venom CI - simple self-hosted tool allowing you to write CI pipelines as Python code"
authors = ["Dmitry Selishchev <zibertscrem@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
