[tool.poetry]
name = "VenomCI-SDK"
version = "0.0.1"
description = "SDK for writing VenomCI pipelines"
authors = ["Dmitry Selishchev <zibertscrem@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
