[tool.poetry]
name = "VenomCI-SDK"
version = "0.0.1"
description = "SDK for writing VenomCI pipelines"
authors = ["Dmitry Selishchev <zibertscrem@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
flake8 = "^3.9.2"
pyproject-flake8 = "^0.0.1-alpha.2"
black = "^21.9b0"
isort = "^5.9.3"

[tool.mypy]
python_version = 3.7
exclude = 'venv'

[tool.flake8]
max-line-length = 120
exclude = ['venv']

[tool.black]
target-version = ["py37"]
line-length = 120

[tool.isort]
profile = "black"
py_version = "37"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
